# Specter-GitLab

./: .gitignore  Dockerfile  LICENSE  README.md  cloudbuild.yaml
src/: .env.example  README.md  main.py  pyproject.toml
src/agent/: claude.py  context.py  duo_platform.py  tools.py  triggers.py
src/dashboard/: app.js  index.html  router.py  styles.css
src/ecs/: components.py  core.py  systems.py
src/integrations/: gitlab_client.py  models.py  webhook.py
src/scripts/: capture_screenshots.py  demo_mode.py  demo_payloads.json
